# loadshit-desktop

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: download.rs  file_ops.rs
src/scripts/: alerts.js  clipboard-monitor.js  dock-manager.js  history-manager.js  main.js  mediathek.js  platforms.js  queue-manager.js  settings.js  theme-manager.js
src/styles/: alerts.css  main.css  mediathek.css  mini-widget.css  queue.css  settings.css  themes.css  titlebar.css
